# code-admin-gitlabnss

./: CMakeLists.txt  README.md
.github/workflows/: publish.yaml
include/: config.hpp  gitlabapi.hpp
res/: gitlabnss.conf  gitlabnssd
src/: CMakeLists.txt  authorized_keys.cpp  config.cpp  gitlabapi.cpp  gitlabnssd.cpp  nss_interface.cpp
src/protocol/: messages.capnp
